--- a/views/reg.css
+++ b/views/reg.css
@@ -36,7 +36,8 @@ body{
     width: 200px;
     outline: none;
     color: white;
-    border-radius: 50px;
+    border-radius: 24px;
+    transition: 0.25s;
     
 }
 
@@ -67,6 +68,8 @@ body{
     outline: none;
     color: white;
     border-radius: 50px;
+    transition: 0.25s;
+
 }
 
 .box input[type = "submit"]{
