Organized some of the static files in the views

--- a/views/login.pug
+++ b/views/login.pug
@@ -3,7 +3,7 @@ head
   meta(charset='UTF-8')
   meta(name='viewport' content='width=device-width, initial-scale=1.0')
   title Login
-  link(rel='stylesheet' href='style_login.css' type='text/css')
+  link(rel='stylesheet' href='css/style_login.css' type='text/css')
 form.box(action='/login/homepage' method='GET')
   h1 Login
   input(type='text' placeholder='Username' name='username')
