--- a/views/reg.pug
+++ b/views/reg.pug
@@ -2,7 +2,7 @@ doctype html
 head
   meta(charset='UTF-8')
   title Registration
-  link(rel='stylesheet' href='reg.css')
+  link(rel='stylesheet' href='css/reg.css')
 form.box(action='/reg/create' method='POST')
   h1  Registration 
   input(type='text' name='username' placeholder='Username')
