--- a/views/login.pug
+++ b/views/login.pug
@@ -4,7 +4,7 @@ head
   meta(name='viewport' content='width=device-width, initial-scale=1.0')
   title Login
   link(rel='stylesheet' href='css/style_login.css' type='text/css')
-form.box(action='/login/homepage' method='GET')
+form.box(action='/login/homepage' method='POST')
   h1 Login
   input(type='text' placeholder='Username' name='username')
   input(type='password' placeholder='Password' name='password')
