Added search page

--- a/views/homepage.pug
+++ b/views/homepage.pug
@@ -28,7 +28,7 @@ nav.navbar.navbar-default(role='navigation')
         li
           a(href='#') Maps
         li
-          a(href='#') Search
+          a(href='/login/search') Search
         li
           a(href='#') Contact us
         li
