Added user profile

--- a/views/homepage.pug
+++ b/views/homepage.pug
@@ -24,7 +24,7 @@ nav.navbar.navbar-default(role='navigation')
         li.current
           a(href='#intro') Home
         li
-          a(href='#') Profile
+          a(href='/login/profile' method='GET') Profile
         li
           a(href='#') Maps
         li
@@ -32,7 +32,7 @@ nav.navbar.navbar-default(role='navigation')
         li
           a(href='#') Contact us
         li
-          a(href='#') Logout
+          a(href='/') Logout
 // intro area
 section#intro
   .intro-container
