added dynamic userprofile

--- a/views/user_profile.pug
+++ b/views/user_profile.pug
@@ -15,7 +15,7 @@ link(rel='stylesheet' href='css/user_style.css')
         // SIDEBAR USER TITLE
         .profile-usertitle
           .profile-usertitle-name
-            | Shadin
+            | #{data.name}
           .profile-usertitle-job
             | Blood: B+
         // END SIDEBAR USER TITLE
