--- a/views/homepage.pug
+++ b/views/homepage.pug
@@ -32,7 +32,7 @@ nav.navbar.navbar-default(role='navigation')
         li
           a(href='#') Contact us
         li
-          a(href='/') Logout
+          a(href='/login/logout') Logout
 // intro area
 section#intro
   .intro-container
