--- a/views/homepage.pug
+++ b/views/homepage.pug
@@ -26,7 +26,7 @@ nav.navbar.navbar-default(role='navigation')
         li
           a(href='/login/profile' method='GET') Profile
         li
-          a(href='#') Maps
+          a(href='/login/notify') Notifications
         li
           a(href='/login/search' method='GET') Search
         li
