fixed search issue

--- a/views/search.pug
+++ b/views/search.pug
@@ -31,7 +31,7 @@ nav.navbar.navbar-default(role='navigation')
           a(href='#') Contact us
         li
           a(href='#') Logout
-form.box(action='/login/search' method='POST')
+form.box(action='/login/get_result' method='POST')
   strong
     h1 Search for Users
   input(type='text' placeholder='Username' name='username')
