--- a/views/user_profile.pug
+++ b/views/user_profile.pug
@@ -21,8 +21,10 @@ link(rel='stylesheet' href='css/user_style.css')
         // END SIDEBAR USER TITLE
         // SIDEBAR BUTTONS
         .profile-userbuttons
+          a(href='')
           button.btn.btn-success.btn-sm(type='button') Message
-          button.btn.btn-danger.btn-sm(type='button') Request
+          a(href='/login/get_blood')
+            button.btn.btn-danger.btn-sm(type='button') Request
         // END SIDEBAR BUTTONS
         // SIDEBAR MENU
         .profile-usermenu
