--- a/views/user_profile.pug
+++ b/views/user_profile.pug
@@ -17,7 +17,7 @@ link(rel='stylesheet' href='css/user_style.css')
           .profile-usertitle-name
             | #{data.name}
           .profile-usertitle-job
-            | Blood: B+
+            | Blood: #{data.blood}
         // END SIDEBAR USER TITLE
         // SIDEBAR BUTTONS
         .profile-userbuttons
