--- a/views/user_profile.pug
+++ b/views/user_profile.pug
@@ -23,7 +23,7 @@ link(rel='stylesheet' href='css/user_style.css')
         .profile-userbuttons
           a(href='')
           button.btn.btn-success.btn-sm(type='button') Message
-          a(href='/login/notify' method = 'POST')
+          a(href='/login/get_req')
             button.btn.btn-danger.btn-sm(type='button') Request
         // END SIDEBAR BUTTONS
         // SIDEBAR MENU
