fixing some searching issue

--- a/views/search_results.pug
+++ b/views/search_results.pug
@@ -23,8 +23,8 @@ head
         // END SIDEBAR USER TITLE
         // SIDEBAR BUTTONS
         .profile-userbuttons
-          a(href='')
-          button.btn.btn-success.btn-sm(type='button') Request
+          a(href='/login/msg')
+            button.btn.btn-success.btn-sm(type='button') Request
         // END SIDEBAR BUTTONS
         // SIDEBAR MENU
         // END MENU 1
