--- a/views/search_results.pug
+++ b/views/search_results.pug
@@ -23,7 +23,7 @@ head
         // END SIDEBAR USER TITLE
         // SIDEBAR BUTTONS
         .profile-userbuttons
-          a(href=`/login//`+client.username)
+          a(href=`/login/hello/${client.username}/`)
             button.btn.btn-success.btn-sm(type='button') Request
         // END SIDEBAR BUTTONS
         // SIDEBAR MENU
