developing the dynamic link

--- a/views/user_profile.pug
+++ b/views/user_profile.pug
@@ -48,7 +48,7 @@ link(rel='stylesheet' href='css/user_style.css')
         // END MENU
     .col-md-9
       .profile-content
-        | okay
+        | #{data.details}
 center
   strong
     | Powered by 
