--- a/views/admin_reg.pug
+++ b/views/admin_reg.pug
@@ -3,7 +3,7 @@ head
   meta(charset='UTF-8')
   title Registration
   link(rel='stylesheet' href='css/reg.css')
-form.box(action='/create' method='POST')
+form.box(action='/create/reg' method='POST')
   h1  Registration 
   input(type='text' name='username' placeholder='Username')
   input(type='email' name='email' placeholder='Email')
