--- a/views/user_profile.pug
+++ b/views/user_profile.pug
@@ -21,7 +21,7 @@ link(rel='stylesheet' href='css/user_style.css')
         // END SIDEBAR USER TITLE
         // SIDEBAR BUTTONS
         .profile-userbuttons
-          a(href='')
+          a(href='/login/see_req')
           button.btn.btn-success.btn-sm(type='button') Message
           a(href='/login/get_req')
             button.btn.btn-danger.btn-sm(type='button') Request
