--- a/views/overview.pug
+++ b/views/overview.pug
@@ -21,8 +21,8 @@ link(rel='stylesheet' href='css/user_style.css')
         // END SIDEBAR USER TITLE
         // SIDEBAR BUTTONS
         .profile-userbuttons
-          a(href='/login/see_req')
-             button.btn.btn-success.btn-sm(type='button') Message
+          a(href='#')
+             button.btn.btn-success.btn-sm(type='button') Request
         // END SIDEBAR BUTTONS
         // SIDEBAR MENU
         // END MENU
