Added some links

--- a/views/homepage.pug
+++ b/views/homepage.pug
@@ -22,7 +22,7 @@ nav.navbar.navbar-default(role='navigation')
     .navigation.collapse.navbar-collapse.navbar-ex1-collapse
       ul.nav.navbar-nav
         li.current
-          a(href='#intro') Home
+          a(href='/login/news') News Feed
         li
           a(href='/login/profile' method='GET') Profile
         li
@@ -30,7 +30,7 @@ nav.navbar.navbar-default(role='navigation')
         li
           a(href='/login/search' method='GET') Search
         li
-          a(href='#') Contact us
+          a(href='#') Chat Room
         li
           a(href='/login/logout') Logout
 // intro area
