--- a/views/notify.pug
+++ b/views/notify.pug
@@ -23,8 +23,8 @@ head
         // END SIDEBAR USER TITLE
         // SIDEBAR BUTTONS
         .profile-userbuttons
-          a(href='')
-          button.btn.btn-success.btn-sm(type='button') Accept
+          a(href=`/login/accept/: ${client.username}/`)
+            button.btn.btn-success.btn-sm(type='button') Accept
           a(href='')
             button.btn.btn-danger.btn-sm(type='button') Decline
         // END SIDEBAR BUTTONS
