--- a/views/user_profile.pug
+++ b/views/user_profile.pug
@@ -38,13 +38,13 @@ link(rel='stylesheet' href='css/user_style.css')
                 i.glyphicon.glyphicon-user
                 | &#x9;&#x9;&#x9;&#x9;&#x9;&#x9;&#x9;Account Settings
             li
-              a(href='#' target='_blank')
+              a(href='/login/task' target='_blank')
                 i.glyphicon.glyphicon-ok
                 | &#x9;&#x9;&#x9;&#x9;&#x9;&#x9;&#x9;Tasks
             li
-              a(href='#')
+              a(href='/login/requested')
                 i.glyphicon.glyphicon-flag
-                | &#x9;&#x9;&#x9;&#x9;&#x9;&#x9;&#x9;Help
+                | &#x9;&#x9;&#x9;&#x9;&#x9;&#x9;&#x9;Accepted
         // END MENU
     .col-md-9
       .profile-content
