Needed to fix bugs in accept

--- a/views/notify.pug
+++ b/views/notify.pug
@@ -23,7 +23,7 @@ head
         // END SIDEBAR USER TITLE
         // SIDEBAR BUTTONS
         .profile-userbuttons
-          a(href=`/login/accept/: ${client.username}/`)
+          a(href=`/login/accept/${client.username}/`)
             button.btn.btn-success.btn-sm(type='button') Accept
           a(href='')
             button.btn.btn-danger.btn-sm(type='button') Decline
