Added requested and accepted user

--- a/views/accept.pug
+++ b/views/accept.pug
@@ -25,9 +25,9 @@ each client in result
     #chat-window
       #output
         p
-          strong #{client.username_req}
+          strong #{client.username_accept}
           br
-          | #{client.email_req}
+          | #{client.email_accpt}
       #feedback
 .parallax-container
   .parallax
