--- a/views/user_profile.pug
+++ b/views/user_profile.pug
@@ -38,7 +38,7 @@ link(rel='stylesheet' href='css/user_style.css')
                 i.glyphicon.glyphicon-user
                 | &#x9;&#x9;&#x9;&#x9;&#x9;&#x9;&#x9;Account Settings
             li
-              a(href='/login/task' target='_blank')
+              a(href='/login/task')
                 i.glyphicon.glyphicon-ok
                 | &#x9;&#x9;&#x9;&#x9;&#x9;&#x9;&#x9;Tasks
             li
