Added chat room with dynamic link

--- a/views/login.pug
+++ b/views/login.pug
@@ -9,3 +9,4 @@ form.box(action='/login/homepage' method='POST')
   input(type='text' placeholder='Username' name='username')
   input(type='password' placeholder='Password' name='password')
   input(type='submit' value='Login')
+  a(href='/reg/' method='GET') Create an account?
