--- a/views/reg.pug
+++ b/views/reg.pug
@@ -19,3 +19,4 @@ form.box(action='/reg/create' method='POST')
     option(value='AB+') AB+
     option(value='AB-') AB-
   input(type='submit' name='' value='Register')
+  a(href='/login/' method='GET') Have an account??
