--- a/views/homepage.pug
+++ b/views/homepage.pug
@@ -30,7 +30,7 @@ nav.navbar.navbar-default(role='navigation')
         li
           a(href='/login/search' method='GET') Search
         li
-          a(href='/login/chat') Chat Room
+          a(href='https://mdks-chat-room.herokuapp.com/') Chat Room
         li
           a(href='/login/logout') Logout
 // intro area
