--- a/views/task.pug
+++ b/views/task.pug
@@ -17,7 +17,7 @@ nav
       li
         a(href='/login/search') Search
       li
-        a(href='/login/chat') Chat Room
+        a(href='https://mdks-chat-room.herokuapp.com/') Chat Room
       li
         a(href='/login/logout') Logout
 each client in result
