--- a/views/user_update.pug
+++ b/views/user_update.pug
@@ -38,11 +38,11 @@ link(rel='stylesheet' href='css/user_update.css')
                 i.glyphicon.glyphicon-user
                 | &#x9;&#x9;&#x9;&#x9;&#x9;&#x9;&#x9;&#x9;Account Settings
             li
-              a(href='#' target='_blank')
+              a(href='/login/task')
                 i.glyphicon.glyphicon-ok
                 | &#x9;&#x9;&#x9;&#x9;&#x9;&#x9;&#x9;&#x9;Tasks
             li
-              a(href='#')
+              a(href='/login/requested')
                 i.glyphicon.glyphicon-flag
                 | &#x9;&#x9;&#x9;&#x9;&#x9;&#x9;&#x9;&#x9;Help
         // END MENU
@@ -58,6 +58,6 @@ link(rel='stylesheet' href='css/user_update.css')
 center
   strong
     | Powered by 
-    a(href='' target='_blank') BSB
+    a(href='/login/homepage' target='_blank') BSB
 br
 br
