--- a/views/news.pug
+++ b/views/news.pug
@@ -13,11 +13,11 @@ nav
       li
         a(href='/login/homepage') Home Page
       li
-        a(href='/login/profle') Profile
+        a(href='/login/profile') Profile
       li
         a(href='/login/search') Search
       li
-        a(href='/login/chat') Chat Room
+        a(href='https://mdks-chat-room.herokuapp.com/') Chat Room
       li
         a(href='/login/logout') Logout
 form(action='/login/feed' method='POST')
