--- a/views/homepage.pug
+++ b/views/homepage.pug
@@ -56,7 +56,7 @@ section#intro
             .carousel-content
               h2.animated.fadeInDown Give &amp; Take 
               p.animated.fadeInUp
-                | In order to help someone we humbly request you don&apos;t donate blood if you have Cancer or HIV, the reciver might not survive it&apos;s bad way to go to hell so don&apos;t do it
+                | In here you can donate blood also if you want you can take too if you need help
               a.btn-get-started.animated.fadeInUp(href='#about') Read More
         // Slide 3
         .item
@@ -83,28 +83,28 @@ section#about.home-section.bg-white
         .section-heading
           h2 About us
           .heading-line
-          p We want to create a huge community
+          p We want to make lives more easier 
     .row.wow.fadeInUp
       .col-md-6.about-img
-        img(src='img/hola.jpg' alt='')
+        img(src='img/hola2.jpg' alt='')
       .col-md-6.content
-        h2 IDK what to say we are just a bunch of hooligans
-        h3 he he
+        h2 The Blood Donation Community
+        h3 
         p
-          | Ahoy mate!! are looking for someone to suck the blood from you ??
-          | look no further the BSB is here!!
-          | we will suck every last bit of blood from your body :)
-          | So, don&apos;t wait come here we will do our best to leave you lifeless in end of the
-          | process. :)
-          | don&apos;t worry you won&apos;t go to hell
+          | In here we have create a community where people will donate
+          | blood with out the help of any third person
+          | we would like the exchange of blood more easier and more sufficient 
+          | to those who is in need requires attention the can use this 
+          | to get the blood without any  extra effort.
+          | at last, stay safe 
 // Parallax 1
 section#parallax1.home-section.parallax(data-stellar-background-ratio='0.5')
   .container
     .row
       .col-md-12
         .color-light
-          h2.wow.bounceInDown(data-wow-delay='0.5s') Details are the key for perfection so give every detail okay??
-          p.lead.wow.bounceInUp(data-wow-delay='1s') Don&apos;t give false info you don&apos;t want to go to hell 
+          h2.wow.bounceInDown(data-wow-delay='0.5s') Details are the key for perfection it's cursial to give as much details as possible
+          p.lead.wow.bounceInUp(data-wow-delay='1s') 
 // Services
 section#services.home-section.bg-white
   .container
@@ -113,7 +113,7 @@ section#services.home-section.bg-white
         .section-heading
           h2 Services
           .heading-line
-          p We will drain blood as long as you live :)
+          p We would like help everyone as long as they live :)
     .row
       .col-md-12
         #carousel-service.service.carousel.slide
@@ -124,7 +124,7 @@ section#services.home-section.bg-white
                 .col-sm-12.col-md-offset-1.col-md-6
                   .wow.bounceInLeft
                     h4 Donate
-                    p If you get tired don&apos;t worry we will force you to donate sounds good right?? :) 
+                    p Donate when you are able to do not force youself
                 .col-sm-12.col-md-5
                   .screenshot.wow.bounceInRight
                     img.img-responsive(src='img/screenshots/1.png' alt='')
@@ -142,7 +142,7 @@ section#services.home-section.bg-white
                 .col-sm-12.col-md-offset-1.col-md-6
                   .wow.bounceInLeft
                     h4 Satisfaction
-                    p you will go to heaven :).
+                    p you will be satisfied :).
                 .col-sm-12.col-md-5
                   .screenshot.wow.bounceInRight
                     img.img-responsive(src='img/screenshots/3.png' alt='')
@@ -205,14 +205,14 @@ section#team.home-section.bg-white
           p Just don&apos;t ask ....
     .col-xs-12.col-sm-3.col-md-3.col-lg-3(data-wow-delay='0.3s')
       .box-team.wow.bounceInUp
-        img.img-circle.img-responsive(src='img/team/rsz_shadin.jpg' alt='')
+        img.img-circle.img-responsive(src='img/team/rsz_shadin.jpg' alt='Shadin')
         h4 Shadin
-        p Who let the dogs out?? woof woof!!
+        p Regular Donar
     .col-xs-12.col-sm-3.col-md-3.col-lg-3(data-wow-delay='0.5s')
       .box-team.wow.bounceInUp
-        img.img-circle.img-responsive(src='img/team/rafee.jpg' alt='')
+        img.img-circle.img-responsive(src='img/team/rsz_rafi.jpg' alt='rafee')
         h4 Rafee
-        p Tomar abbu
+        p Regular receiver
 // Contact
 section#contact.home-section.bg-gray
   .container
@@ -222,8 +222,8 @@ section#contact.home-section.bg-gray
           h2 Contact us
           .heading-line
           p
-            | If you have any question or just want to say &apos;hello&apos; to BSB please fill out form below and
-            | we will start sucking your blood  within 24 hours.
+            | If you have any question or just want to say &apos;hello&apos; to BDC please fill out form below and
+            | we will start taking your blood  within 24 hours.
     .row
       .col-md-offset-2.col-md-8
         #sendmessage Your message has been sent. Thank you!
@@ -305,10 +305,10 @@ footer
   .container
     .row
       .col-md-12
-        p Copyright &copy; BSB. All rights reserved. just kidding!!!
+        p Copyright &copy; BDC. All rights reserved. just kidding!!!
         .credits
           | Designed by 
-          a(href='#') BSB team
+          a(href='#') BDC team
 a.back-to-top(href='#')
   i.fa.fa-chevron-up
 // js
