--- a/views/user_update.pug
+++ b/views/user_update.pug
@@ -58,6 +58,6 @@ link(rel='stylesheet' href='css/user_update.css')
 center
   strong
     | Powered by 
-    a(href='/login/homepage' target='_blank') BSB
+    a(href='/login/homepage') BSB
 br
 br
